--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -11,6 +11,7 @@
     <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
 {% endif %}
         <h2>{{ post.title }}</h2>
+        <img src="{{ post.image.url }}" alt="img">
         <p>{{ post.text|linebreaksbr }}</p>
     </div>
 {% endblock %}
